Fixed models, working admin dashboard, basic api for users/groups

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -64,6 +65,7 @@ target/
 .ipynb_checkpoints
 
 # Common IDE and editor buffer files
+.vscode/
 .idea/
 ~*
 \#*
