- AddPost view is available now (only UI)   * A nice Marked Down Editor
- view a signle post through /post/id. If users try to access /post/, I'll just kick them back to the dashboard or index page depending on their login status.. because I'm lazy... what can I say?

- Added friends / my posts / add post to the nav menu

- This commit still doesn't have the long overdue unit tests........ :( Probably I couldn't get to that until part 2 of this project

--- a/c404WebProject/package.json
+++ b/c404WebProject/package.json
@@ -28,6 +28,7 @@
   "author": "Kevin Tang",
   "license": "",
   "dependencies": {
+    "react-markdown-editor": "0.4.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
