--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==1.10.2
 djangorestframework==3.4.7
 requests
-django-cors-headers  
+django-cors-headers
+gunicorn==19.4.5
+whitenoise==2.0.6
