--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "test": "mocha --compilers js:babel-register --recursive",
-    "test-watch": "npm test -- --watch",
-    "heroku-postbuild": "webpack -p --config webpack.prod.config.js"
+    "test-watch": "npm test -- --watch"
   },
   "babel": {
     "presets": [
