--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
     "react-markdown-editor": "0.4.0",
+    "react-markdown": "^2.4.2",
     "react-notify-toast ": "^0.1.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
@@ -55,6 +56,7 @@
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "json-loader": "0.5.4 ",
     "mocha": "^3.1.0",
     "node-sass": "^3.10.1",
     "react-addons-test-utils": "^15.3.2",
