--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
   "dependencies": {
     "connect": "3.5.0",
     "express": "^4.14.0",
+    "json-loader": "^0.5.4",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
-    "react-markdown-editor": "0.4.0",
     "react-markdown": "^2.4.2",
+    "react-markdown-editor": "0.4.0",
     "react-notify-toast ": "^0.1.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.6",
+    "react-update": "^0.4.2",
     "redux": "^3.5.2",
     "redux-form": "^6.0.2",
     "redux-saga": "^0.11.1",
